--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,6 @@
   --fonte-primaria: "Krona One", sans-serif;
   --fonte-secundaria: "Montserrat", sans-serif;
 }
-
 * {
   margin: 0;
   padding: 0;
@@ -20,31 +19,26 @@ body {
   background-color: var(--cor-primaria);
   color: var(--cor-secundaria);
 }
-
 .cabecalho {
   padding: 2% 0% 0% 15%;
 }
-
 .cabecalho__menu {
   display: flex;
   gap: 80px;
 }
-
 .cabecalho__menu__link {
   font-family: var(--fonte-secundaria);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   color: var(--cor-terciaria);
   text-decoration: none;
 }
-
 .apresentacao {
   padding: 5% 15%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
 .apresentacao__conteudo {
   width: 615px;
   display: flex;
@@ -53,16 +47,14 @@ body {
 }
 
 .apresentacao__conteudo__titulo {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-family: var(--fonte-primaria);
 }
-
 .titulo-destaque {
   color: var(--cor-terciaria);
 }
-
 .apresentacao__conteudo__texto {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-family: var(--fonte-secundaria);
 }
 
@@ -73,13 +65,11 @@ body {
   align-items: center;
   gap: 32px;
 }
-
 .apresentacao__links__subtitulo {
   font-family: var(--fonte-primaria);
   font-weight: 400;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
-
 .apresentacao__links__link {
   display: flex;
   justify-content: center;
@@ -88,24 +78,22 @@ body {
   width: 378px;
   text-align: center;
   border-radius: 8px;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   padding: 21.5px 0;
   text-decoration: none;
   color: var(--cor-secundaria);
   font-family: var(--fonte-secundaria);
 }
-
 .apresentacao__links__link:hover {
   background-color: var(--cor-hover);
 }
-
 .rodape {
   color: var(--cor-primaria);
   background-color: var(--cor-terciaria);
   padding: 24px;
   text-align: center;
   font-family: var(--fonte-secundaria);
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 400;
 }
