--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
   --fonte-primaria: "Krona One", sans-serif;
   --fonte-secundaria: "Montserrat", sans-serif;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -19,13 +20,16 @@ body {
   background-color: var(--cor-primaria);
   color: var(--cor-secundaria);
 }
+
 .cabecalho {
   padding: 2% 0% 0% 15%;
 }
+
 .cabecalho__menu {
   display: flex;
   gap: 80px;
 }
+
 .cabecalho__menu__link {
   font-family: var(--fonte-secundaria);
   font-size: 1.5rem;
@@ -33,14 +37,16 @@ body {
   color: var(--cor-terciaria);
   text-decoration: none;
 }
+
 .apresentacao {
   padding: 5% 15%;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .apresentacao__conteudo {
-  width: 615px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -50,9 +56,11 @@ body {
   font-size: 2.25rem;
   font-family: var(--fonte-primaria);
 }
+
 .titulo-destaque {
   color: var(--cor-terciaria);
 }
+
 .apresentacao__conteudo__texto {
   font-size: 1.5rem;
   font-family: var(--fonte-secundaria);
@@ -65,12 +73,14 @@ body {
   align-items: center;
   gap: 32px;
 }
+
 .apresentacao__links__subtitulo {
   font-family: var(--fonte-primaria);
   font-weight: 400;
   font-size: 1.5rem;
 }
-.apresentacao__links__link {
+
+.apresentacao__links__navegacao {
   display: flex;
   justify-content: center;
   gap: 16px;
@@ -85,9 +95,15 @@ body {
   color: var(--cor-secundaria);
   font-family: var(--fonte-secundaria);
 }
-.apresentacao__links__link:hover {
+
+.apresentacao__links__navegacao:hover {
   background-color: var(--cor-hover);
 }
+
+.apresentacao__imagem {
+  width: 50%;
+}
+
 .rodape {
   color: var(--cor-primaria);
   background-color: var(--cor-terciaria);
